<resources>
    <string name="app_name">haTTi007</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_TagLine">Be a Spy</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_myorder">My Order</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_feedback">Feedback</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_tagDesc">anything,everyone,anywhere is being recorded</string>
    <string name="menu_profile">Profile</string>
    <string name="volley_error">unable to fetch data from serer</string>
    <string name="process_error">unable to process data</string>
    <string name="title_activity_products">Products</string>
    <string name="title_activity_products_detail">Product Detail</string>
    <string name="title_activity_cart">Cart</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_checkout">Checkout</string>
    <string name="Logout">Logout</string>
    <string name="title_activity_order_submitted">OrderSubmitted</string>
</resources>
