<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_apps_black_24dp"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_myorder"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/menu_myorder" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_profile"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/Logout"/>

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_feedback" />
        </menu>
    </item>

</menu>
